--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,167 @@
+
+.app{
+  background-color: black;
+  color:white; 
+  text-align: center;
+  width: 100vw; 
+  height: 100vh; 
+  
+
+}
+
 body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-      sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
-  code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-      monospace;
-  }
+  padding: 0%;
+  margin: 0;
+}
 
-  .navbar a{
-      margin-left: 16px; 
-      padding: 6px;
-  }
+.center{
+  width: 100vw; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 50px; 
+  flex-direction: column;
+  flex-wrap: wrap; 
+}
 
+.navbar a{
+    margin-left: 16px; 
+    padding: 6px;
+}
+
+.board{
+  width: 400px; 
+  height: 500px; 
+  display: flex;
+  flex-direction: column;
+  border: 1px solid white; 
+}
+
+.row{
+  display: flex;
+  flex-direction: row;
+  margin: 5px; 
+  flex: 33%; 
+}
+
+.letter{
+  display: grid;
+  color: white; 
+  font-weight: 300;
+  margin: 5px; 
+  border: 1px solid white; 
+  font-size: 25px; 
+  height: 80%; 
+  flex: 33%; 
+
+
+}
+
+.keyboard{
+  width: 700px; 
+  height: 300px; 
+  margin-top: 50px;
+}
+
+.firstLine{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+}
+
+.secondLine{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   
+}
+
+.thirdLine{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  
+}
+
+.key{
+  width:50px; 
+  height: 65px; 
+  border-radius: 10%;
+  background: grey;
+  display: grid;
+  font-size: 20px; 
+  color: white; 
+  cursor: pointer; 
+  margin: 5px; 
+  text-align: center;
+  place-items: center;
+  cursor:pointer; 
+
+}
+
+
+
+nav{
+  height: 100px; 
+  display: grid;
+  width: 100%; 
+  border-bottom: 2px solid yellow;
+  background-color: green;
+  list-style-type:none; 
+  margin: 0; 
+  padding: 0; 
+
+
+
+}
+
+li{
+  float: left; 
+}
+
+.button{
+  width: 80px;
+  height: 50px; 
+  background-color: yellow;
+  
+}
+
+
+
+nav h1{
+  color: white; 
+  font-size: 50px; 
+  font-weight: 400; 
+
+}
+
+.list{
+  color: white; 
+  font-size: 25px; 
+  font-weight: 300; 
+  float: left; 
+  display: block;
+  position: relative; 
+  top: 2px; 
+
+}
+#big{
+  width: 100px; 
+}
+
+#green{
+  background: green;
+}
+
+#yellow{
+  background-color: yellow; 
+
+}
+
+.gameOver{
+  font-size: 40px;
+  font-weight: 400;
+  color: yellow; 
+  
+}
